[package]
name = "stepper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiao_m0 = {version="0.11", features=["usb", "rt", "unproven"]}
atsamd-hal = { version = "0.13", default-features=false }
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-hal = "0.2.6"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
utils =  { path = "../utils" }
paste = "1.0"
void = { version="1.0.2",  default-features=false }

[features]
default = ["atsamd-hal/samd21g", "atsamd-hal/samd21g-rt"]
serial = []


[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18"

